--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
@@ -34,7 +31,7 @@
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <ComboBox fx:id="TypeComboBox" layoutX="35.0" layoutY="259.0" onAction="#typeFilter" prefWidth="150.0" />
+                                    <ComboBox fx:id="TypeComboBox" layoutX="35.0" layoutY="259.0" onAction="#onActionFilter" prefWidth="150.0" />
                                     <TextField fx:id="apptTotals" disable="true" layoutX="36.0" layoutY="389.0" />
                                     <Label layoutX="35.0" layoutY="7.0" prefHeight="17.0" prefWidth="149.0" text="Months:" textAlignment="CENTER" textFill="WHITE">
                                        <font>
@@ -51,7 +48,7 @@
                                           <Font name="System Bold Italic" size="18.0" />
                                        </font>
                                     </Label>
-                                    <ComboBox fx:id="MonthComboBox" layoutX="35.0" layoutY="54.0" prefWidth="150.0" />
+                                    <ComboBox fx:id="MonthComboBox" layoutX="35.0" layoutY="54.0" onAction="#onActionFilter" prefWidth="150.0" />
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="442.0" prefWidth="770.0" style="-fx-background-color: #000;">
@@ -122,20 +119,7 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Separator layoutX="451.0" layoutY="-3.0" orientation="VERTICAL" prefHeight="451.0" prefWidth="31.0" />
-                        <BarChart layoutX="14.0" layoutY="29.0" prefHeight="392.0" prefWidth="408.0">
-                          <xAxis>
-                            <CategoryAxis prefHeight="15.0" prefWidth="351.0" side="TOP" tickLabelFill="#fbfcf8">
-                                 <tickLabelFont>
-                                    <Font size="19.0" />
-                                 </tickLabelFont>
-                              </CategoryAxis>
-                          </xAxis>
-                          <yAxis>
-                            <NumberAxis side="LEFT" tickLabelFill="WHITE" />
-                          </yAxis>
-                        </BarChart>
-                        <GridPane layoutX="538.0" layoutY="69.0" prefHeight="301.0" prefWidth="427.0">
+                        <GridPane layoutX="185.0" layoutY="133.0" prefHeight="237.0" prefWidth="545.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -162,7 +146,13 @@
                               <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 60 mins Appointments:" textFill="WHITE" GridPane.rowIndex="7" />
                            </children>
                         </GridPane>
-                        <Label layoutX="151.0" layoutY="413.0" prefHeight="17.0" prefWidth="255.0" text="Appointments Booked Per Day" textAlignment="CENTER" textFill="WHITE" />
+                        <Label layoutX="326.0" layoutY="14.0" prefHeight="46.0" prefWidth="215.0" text="Appointments Booked Per Day" textAlignment="CENTER" textFill="WHITE" />
+                        <HBox alignment="CENTER" layoutX="326.0" layoutY="60.0" prefHeight="45.0" prefWidth="195.0">
+                           <children>
+                              <Label prefHeight="46.0" prefWidth="76.0" text="Current Day : " textAlignment="CENTER" textFill="WHITE" />
+                              <Label prefHeight="46.0" prefWidth="76.0" text="Today" textAlignment="CENTER" textFill="WHITE" />
+                           </children>
+                        </HBox>
                      </children></AnchorPane>
                </content>
             </Tab>
