--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -62,6 +62,16 @@
                                           <TableColumn fx:id="totCustomer_Name" prefWidth="147.0" text="Customer_Name" />
                                       </columns>
                                     </TableView>
+                                    <HBox alignment="CENTER" layoutX="285.0" layoutY="-26.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                                       <children>
+                                          <RadioButton fx:id="AllRB1" mnemonicParsing="false" onAction="#OnRadioButton" selected="true" text="All" textFill="WHITE">
+                                             <toggleGroup>
+                                                <ToggleGroup fx:id="ApptRB1" />
+                                             </toggleGroup>
+                                          </RadioButton>
+                                          <RadioButton fx:id="MonthRB1" mnemonicParsing="false" onAction="#OnRadioButton" text="Filter" textFill="WHITE" toggleGroup="$ApptRB1" />
+                                       </children>
+                                    </HBox>
                                  </children>
                               </AnchorPane>
                           </items>
@@ -136,21 +146,21 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                              <TextField disable="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                              <TextField fx:id="quarterPastTxt" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <TextField fx:id="halfPastTxt" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <TextField fx:id="quarterToTxt" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                              <TextField fx:id="hourTxt" disable="true" onAction="#remainingHours" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                               <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 15 mins Appointments:" textFill="WHITE" GridPane.rowIndex="1" />
                               <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 30 mins Appointments:" textFill="WHITE" GridPane.rowIndex="3" />
                               <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 45 mins Appointments:" textFill="WHITE" GridPane.rowIndex="5" />
                               <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 60 mins Appointments:" textFill="WHITE" GridPane.rowIndex="7" />
                            </children>
                         </GridPane>
-                        <Label layoutX="326.0" layoutY="14.0" prefHeight="46.0" prefWidth="215.0" text="Appointments Booked Per Day" textAlignment="CENTER" textFill="WHITE" />
-                        <HBox alignment="CENTER" layoutX="326.0" layoutY="60.0" prefHeight="45.0" prefWidth="195.0">
+                        <Label layoutX="388.0" layoutY="14.0" prefHeight="46.0" prefWidth="215.0" text="Appointments Booked Per Day" textAlignment="CENTER" textFill="WHITE" />
+                        <HBox alignment="CENTER" layoutX="390.0" layoutY="60.0" prefHeight="45.0" prefWidth="195.0">
                            <children>
                               <Label prefHeight="46.0" prefWidth="76.0" text="Current Day : " textAlignment="CENTER" textFill="WHITE" />
-                              <Label prefHeight="46.0" prefWidth="76.0" text="Today" textAlignment="CENTER" textFill="WHITE" />
+                              <Label fx:id="todayLbl" prefHeight="46.0" prefWidth="76.0" text="Today" textAlignment="CENTER" textFill="WHITE" />
                            </children>
                         </HBox>
                      </children></AnchorPane>
