--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="941.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ApptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="941.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ApptController">
    <children>
       <HBox alignment="CENTER" layoutX="334.0" layoutY="32.0" prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -14,6 +20,7 @@
                </toggleGroup></RadioButton>
             <RadioButton fx:id="MonthRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Month" toggleGroup="$ApptRB" />
             <RadioButton fx:id="WeekRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Week" toggleGroup="$ApptRB" />
+            <RadioButton fx:id="DayRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Day" toggleGroup="$ApptRB" />
          </children>
       </HBox>
       <TableView fx:id="AppointmentTable" layoutX="10.0" layoutY="100.0" prefHeight="200.0" prefWidth="922.0">
