--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -62,16 +62,6 @@
                                           <TableColumn fx:id="totCustomer_Name" prefWidth="147.0" text="Customer_Name" />
                                       </columns>
                                     </TableView>
-                                    <HBox alignment="CENTER" layoutX="285.0" layoutY="-26.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-                                       <children>
-                                          <RadioButton fx:id="AllRB1" mnemonicParsing="false" onAction="#OnRadioButton" selected="true" text="All" textFill="WHITE">
-                                             <toggleGroup>
-                                                <ToggleGroup fx:id="ApptRB1" />
-                                             </toggleGroup>
-                                          </RadioButton>
-                                          <RadioButton fx:id="MonthRB1" mnemonicParsing="false" onAction="#OnRadioButton" text="Filter" textFill="WHITE" toggleGroup="$ApptRB1" />
-                                       </children>
-                                    </HBox>
                                  </children>
                               </AnchorPane>
                           </items>
@@ -87,7 +77,7 @@
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <ComboBox fx:id="ContactComboBox" layoutX="11.0" layoutY="33.0" onAction="#ContactFilter" prefWidth="150.0" />
+                                    <ComboBox fx:id="ContactComboBox" layoutX="11.0" layoutY="33.0"  prefWidth="150.0" />
                                     <Label layoutX="45.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="12.0" />
