--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -77,7 +77,7 @@
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <ComboBox fx:id="ContactComboBox" layoutX="11.0" layoutY="33.0"  prefWidth="150.0" />
+                                    <ComboBox fx:id="ContactComboBox" layoutX="11.0" layoutY="33.0" prefWidth="150.0" />
                                     <Label layoutX="45.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="12.0" />
@@ -148,7 +148,12 @@
                               <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 60 mins Appointments:" textFill="WHITE" GridPane.rowIndex="7" />
                            </children>
                         </GridPane>
-                        <Label layoutX="388.0" layoutY="14.0" prefHeight="46.0" prefWidth="215.0" text="Appointments Booked Per Day" textAlignment="CENTER" textFill="WHITE" />
+                        <HBox layoutX="338.0" layoutY="10.0" prefHeight="100.0" prefWidth="284.0">
+                           <children>
+                              <Label prefHeight="46.0" prefWidth="164.0" text="Remaining Appointments for :" textAlignment="CENTER" textFill="WHITE" />
+                              <Label fx:id="currDateLbl" alignment="CENTER" prefHeight="48.0" prefWidth="65.0" text="Current Date" textFill="WHITE" />
+                           </children>
+                        </HBox>
                         <HBox alignment="CENTER" layoutX="384.0" layoutY="60.0" prefHeight="45.0" prefWidth="195.0">
                            <children>
                               <Label prefHeight="46.0" prefWidth="76.0" text="Current Day : " textAlignment="CENTER" textFill="WHITE" />
