--- a/src/main/resources/cordinus/cordinus_global/ModAppt.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ModAppt.fxml
@@ -51,12 +51,14 @@
             <DatePicker fx:id="ApptEndPicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <Label text="Customer ID" GridPane.rowIndex="2" />
             <Label text="User ID" GridPane.rowIndex="1" />
-            <TextField fx:id="CustomerIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="UserIDTxt" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="CustomerIDTxt" disable="true" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="UserIDTxt" disable="true" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="StartTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
             <ComboBox fx:id="EndTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
             <ComboBox fx:id="ContactComboBox" onAction="#ContactUpdate" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
             <ComboBox fx:id="TypeComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <ComboBox fx:id="UserComboBox" onAction="#userUpdate" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <ComboBox fx:id="CustomerComboBox" onAction="#customerUpdate" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
          </children>
       </GridPane>
       <HBox alignment="CENTER" layoutX="283.0" layoutY="349.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
