--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="941.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ApptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="493.0" prefWidth="941.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ApptController">
    <children>
       <HBox alignment="CENTER" layoutX="334.0" layoutY="32.0" prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -25,8 +31,8 @@
             <TableColumn fx:id="Type" prefWidth="103.0" text="Type" />
             <TableColumn fx:id="Start" minWidth="8.0" prefWidth="124.0" text="Start" />
             <TableColumn fx:id="End" prefWidth="119.0" text="End" />
-            <TableColumn fx:id="Contact_ID" prefWidth="87.0" text="Contact ID" />
-            <TableColumn fx:id="Customer_ID" prefWidth="74.0" text="Cust. ID" />
+            <TableColumn fx:id="Contact_ID" prefWidth="81.0" text="Contact ID" />
+            <TableColumn fx:id="Customer_ID" text="Cust. ID" />
             <TableColumn fx:id="User_ID" prefWidth="86.0" text="User ID" />
         </columns>
       </TableView>
@@ -41,6 +47,11 @@
       <Label fx:id="appointmentsTitle" alignment="CENTER" layoutX="315.0" layoutY="13.0" prefHeight="56.0" prefWidth="251.0" text="APPOINTMENTS">
          <font>
             <Font name="Garamond" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="appointmentDisplayLbl" alignment="CENTER" contentDisplay="CENTER" layoutX="114.0" layoutY="402.0" prefHeight="17.0" prefWidth="689.0" text="All Appointments Currently Displayed!">
+         <font>
+            <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
    </children>
