--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="1039.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 2px;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ReportController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="1039.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 2px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ReportController">
    <children>
       <TabPane layoutX="21.0" layoutY="16.0" prefHeight="477.0" prefWidth="997.0" style="-fx-background-color: #000;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -33,7 +47,7 @@
                                           <Font name="System Bold Italic" size="18.0" />
                                        </font>
                                     </Label>
-                                    <ComboBox fx:id="MonthComboBox" layoutX="35.0" layoutY="54.0" onAction="#onActionFilter" prefWidth="150.0" />
+                                    <ComboBox fx:id="monthComboBox" layoutX="35.0" layoutY="54.0" onAction="#onActionFilter" prefWidth="150.0" />
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="442.0" prefWidth="770.0" style="-fx-background-color: #000;">
